added a thanks page for feedback submission

--- a/OGV/client/templates/feedback.html
+++ b/OGV/client/templates/feedback.html
@@ -19,16 +19,17 @@
 			</select><br>
 
 		    <strong>Message</strong> <br>
-			<textarea name="message" form="feedForm" style="width: 400px; height: 100px; font-size: 10pt;" maxlength="500" onkeyup="textCounter(this,'counter',500);"></textarea>
+			<textarea name="message" form="feedForm" style="width: 380px; height: 100px; font-size: 10pt;" maxlength="500" onkeyup="textCounter(this,'counter',500);"></textarea>
 			<p id="counter" style="color:red;font-size:10px">*500 characters left</p>
 
 			<p style="font-size:80%">*All fields are compulsory to fill</p>
 		    <button class="btn primary-btn btn-default" type="submit">Send</button>
 		    
-		    <input type="hidden" name="_next" value="//localhost:3000/feedback_thanks" />
+		    <input type="hidden" name="_next" value="http://localhost:3000/thanks" />
 		    <input type="hidden" name="_subject" value="[OGV] feedback Submission" />
 		</form>
-	</div>
+		<h5>Or visit our <a href="https://github.com/BRL-CAD/OGV-meteor" target="_blank">github</a> page for more details.</h5>
+		</div>
 
 	<script>
 	function textCounter(field,field2,maxlimit)
