--- a/OGV/client/templates/model_feed.html
+++ b/OGV/client/templates/model_feed.html
@@ -1,5 +1,7 @@
 <template name = "modelFeed">
+    {{> profileSidebar}}
     <div class="feed-wrapper">
+    <h1 style="margin: 10px auto 20px 13px">Hi, {{currentUser.profile.name}}!</h1>
     {{#if models}}
 	{{#each models}}
 	    {{#if converted }}
@@ -7,8 +9,9 @@
 	    {{/if}}
 	{{/each}}
     {{else}}
-	<h3>OGV is hungry, <a href="/upload">feed some models</a></h3>
+	<h3>You seem to be new here, your newsfeed looks empty</h3>
     {{/if}}
+    <button class="btn primary-btn btn-default" id="loadMoreButton" style="margin: 10px auto auto 250px"> LOAD MORE . . . </button>
     </div>
 </template>
 
@@ -39,10 +42,9 @@
      </div>
      <span class="clear"></span>
 </div>
-	    
-	     
-
 </template>
+
+
 <template name="modelView">
 	<div class="post-item model-preview" style="background-image:url(&quot;{{thumbImg.url}}&quot;);">
 		<a class = " model-preview-link" href="/models/{{_id}}">
