--- a/OGV/client/templates/model_viewer.html
+++ b/OGV/client/templates/model_viewer.html
@@ -42,22 +42,27 @@
 			<p class="sm-menu-text">Owner</p></a>
 		</div>
 		
+		<button id="buttonWindow">click me </button>
 	</div>
+	
 	<div id="controller" >
 	
 	</div>
+	
 	</div>
 
 	<style>
-		#model-container
-		{
-			background-color:red;
-		}
-
+		
 		#controller {
 			position: fixed;
     		top: 8%;
     		right: 2%;
 		}
 	</style>
+
+	<script>
+		
+	    
+	</script>
+
 </template>
