--- a/OGV/client/templates/model_feed.html
+++ b/OGV/client/templates/model_feed.html
@@ -1,5 +1,5 @@
 <template name = "modelFeed">
-    {{> profileSidebar}}
+    {{> newsfeedSidebar}}
     <div class="feed-wrapper">
     <h1 style="margin: 10px auto 20px 13px">Hi, {{currentUser.profile.name}}!</h1>
     {{#if models}}
