--- a/OGV/client/templates/model_feed.html
+++ b/OGV/client/templates/model_feed.html
@@ -20,7 +20,7 @@
     <div class="feed-item model-post">
       <div class="post-section post-sidebar user-info">
 		<a href="/profile/{{ owner._id }}">
-			<div class="post-item user-image" style="background:url('{{userImg}}');"></div>
+			<div class="post-item user-image" style="background:url('{{userImg}}');height:100px;width:100px;border-radius:8%"></div>
 		</a>
 		<div class="post-item post-meta user-meta"></div>
       </div>
