model_feed pagination and removed suggested models div

--- a/OGV/client/templates/newsfeed_sidebar.html
+++ b/OGV/client/templates/newsfeed_sidebar.html
@@ -31,7 +31,7 @@
 	    </div>
 
 	    <!-- About popular models -->
-		<div class="newsfeed-info-content">
+<!-- 		<div class="newsfeed-info-content">
 			<p style="color:#ccc;font-size: 15px;"> SUGGESTED MODELS </p>
 			{{#each suggestedModel}}
 				<div id="suggestModel-body">
@@ -46,11 +46,11 @@
 					<div id="suggestedModel-right" style="transform:scale(0.45,0.45);transform-origin:0 0;margin-bottom:-120px;margin-top:-5%">
 						{{> modelView}}
 					</div>
-					
 				</div>
 			{{/each}}
-	    </div>
-
+			<a href="#"><button class="btn primary-btn btn-default" id="showMoreModels"> SHOW MORE </button></a>
+	    </div> -->
+	    
 	    </div>
 	<style>
 		.primary-btn
