--- a/OGV/client/templates/menu.html
+++ b/OGV/client/templates/menu.html
@@ -14,6 +14,7 @@
 					<button class="rm-item rm-log-out" id="log-out" title="Log out"><img src="/icons/logout.png" width="30px" height="30px"></button>
 					<a href="/profile/{{ userId }}">{{ currentUser.profile.name }}</a>
 					&nbsp;&nbsp;<a href="/">Home</a>
+					&nbsp;&nbsp;<a href="/explore">Explore</a>
 				{{/unless}}
 			</span>
 
