--- a/OGV/client/templates/model_feed.html
+++ b/OGV/client/templates/model_feed.html
@@ -36,6 +36,8 @@
         <div class="post-item love-wrapper">
             {{> lovemeter }}
         </div>
+        <img src="/icons/views.png" style="height:40px;width:40px">
+		    {{this.viewsCount}}
         <div class="post-item comments-wrapper">
         	{{> comments }}    
         </div>
