removed non-working functionalities

--- a/OGV/client/templates/newsfeed_sidebar.html
+++ b/OGV/client/templates/newsfeed_sidebar.html
@@ -30,7 +30,7 @@
 	    </div>
 
 	    <!-- About popular models -->
-		<div class="newsfeed-info-content">
+<!-- 		<div class="newsfeed-info-content">
 			<p style="color:#ccc;font-size: 15px;"> SUGGESTED MODELS </p>
 			{{#each suggestedModel}}
 				<div id="suggestModel-body">
@@ -49,7 +49,7 @@
 			{{/each}}
 			<a href="#"><button class="btn primary-btn btn-default" id="showMoreModels"> SHOW MORE </button></a>
 	    </div>
-	    
+ -->	    
 	    </div>
 	<style>
 		.primary-btn
