--- a/OGV/client/templates/explore.html
+++ b/OGV/client/templates/explore.html
@@ -12,7 +12,7 @@
 		{{> searchUserResult}}
 	</nav>
 
-	<h3>Filters</h3>
+<!-- 	<h3>Filters</h3>
 	
 		<select class = "filter-select" id="filter-category" form="filter">
 	  		<option value="" disabled selected>Categories</option>
@@ -52,7 +52,7 @@
 	<div id="exploreResult">
 		{{> exploreResult}}
 	</div>
-
+ -->
 	<script>
 		$(document).ready(function() {
 		    $('#search-box').focusin(function() {
