Changed CSS and Icons for login brands

--- a/OGV/client/styles/styles.css
+++ b/OGV/client/styles/styles.css
@@ -73,6 +73,15 @@ h2 {
  * Helpers Over
  */
 
+/* 
+ * Brand Login Icons
+ */
+
+.fa {
+    color: #444;
+}
+
+
 .universal-header {
     width:100%;
     height: 43px;
@@ -257,8 +266,8 @@ input:focus {
 }
 
 .meta-links {
-    font-size:14px;
-    margin-top:20px;
+    font-size:15.3px;
+    margin-top:10px;
     display:block;
 }
 
@@ -1532,35 +1541,6 @@ svg {
     color:white;
     position:relative;
     bottom:8px;
-}
-
-/*feedback*/
-.cbp-spmenu {
-    position: fixed;
-    right:100px;
-}
-
-.cbp-spmenu-vertical {
-    height: 50%;
-    top: 10%;
-    z-index: 1200;
-}
-
-/* Vertical menu that slides from the left or right */
-.cbp-spmenu-right {
-    right: -500px;
-}
-
-.cbp-spmenu-right.cbp-spmenu-open {
-    right: 25px;
-}
-
-
-/* Transitions */
-.cbp-spmenu{
-    -webkit-transition: all 0.3s ease;
-    -moz-transition: all 0.3s ease;
-    transition: all 0.3s ease;
 }
 
 #feedbackContainer
