--- a/OGV/client/templates/authentication/login.html
+++ b/OGV/client/templates/authentication/login.html
@@ -7,18 +7,16 @@
 			<input class= "primary-input password" id="log-in-password" type="password" name="password" placeholder="password">
 			<button class="btn btn-default primary-input primary-btn" type="submit"> Log In </button>
 		</form>
-			<h4 class="meta-links" align="center" style="color:#e74c3c">OR SIGN IN WITH</h4>
-			
-			<div align="center">
-	        	<a href="#"><img id="loginGoogle" src="/icons/google-plus.png" width="50px" height="50px"/></a>
-	        	<a href="#"><img id="loginFacebook" src="/icons/facebook.png" width="50px" height="50px"/></a>
-	        	<a href="#"><img id="loginGithub" src="/icons/github.png" width="50px" height="50px"/></a>
-	        	<!-- Uncomment the line below while configuring 3rd party login -->
-	        	{{> loginButtons}}
-			</div>	 
-
-		<a class = "meta-links" id="show-forgot-password" href="/forgot-password" > Forgot Password </a>
-		<a class = "meta-links" id="show-sign-up" href="/sign-up" > Sign Up </a>
+		<!-- Brand Icons -->
+		<div align="center">
+        	<a href="#"><i id="loginGoogle" class="googleIcon fa fa-google-plus-square fa-3x"></i></a>&nbsp;
+        	<a href="#"><i id="loginFacebook" class="facebookIcon fa fa-facebook-square fa-3x"></i></a>&nbsp;
+        	<a href="#"><i id="loginGithub" class="githubIcon fa fa-github-square fa-3x"></i></a>
+        	<!-- Uncomment the line below while configuring 3rd party login -->
+        	<!-- {{> loginButtons}} -->
+			<a class="meta-links" id="show-sign-up" href="/sign-up">Sign Up</a>			
+			<a class="meta-links" id="show-forgot-password" href="/forgot-password">Forgot Password</a>	
+		</div>
 	</div>
 	{{else}}
 		{{>modelFeed}}
