Redesigned model-viewer page

--- a/OGV/client/templates/model_viewer.html
+++ b/OGV/client/templates/model_viewer.html
@@ -18,60 +18,44 @@
 	<div id="model-container">
 	<div class="secondary-menu">
 		<div class="sm-item" id="sm-item-download">
-		<a href = "/cfs/files/modelFiles/{{_id}}/{{name}}">	<img src="/icons/Download.png" width="35px" height="35px">
+		<a href = "/cfs/files/modelFiles/{{_id}}/{{name}}">	<img src="/icons/Download.png" width="28px" height="28px">
 			<p class="sm-menu-text">Download</p></a>
 		</div>
 
 		<div class="sm-item" id="sm-item-love">
-			<img src="/icons/Shape-Heart.png" width="35px" height="35px">
+			<img src="/icons/Shape-Heart.png" width="28px" height="28px">
 			<p class="sm-menu-text">Love ({{ lovers }})</p>
 		</div>
 
 		<div class="sm-item" id="sm-item-comment">
-			<img src="/icons/Message.png" width="35px" height="35px">
+			<img src="/icons/Message.png" width="28px" height="28px">
 			<p class="sm-menu-text">Comment</p>
 		</div>
 
 		<div class="sm-item" id="sm-item-embed">
-			<img src="/icons/Link.png" width="35px" height="35px">
+			<img src="/icons/Link.png" width="28px" height="28px">
 			<p class="sm-menu-text">Embed</p>
 		</div>
 
 		<div class="sm-item" id="sm-item-owner">
-		<a href = "/profile/{{ownerId}}"><img src="/icons/User.png" width="35px" height="35px">
+		<a href = "/profile/{{ownerId}}"><img src="/icons/User.png" width="28px" height="28px">
 			<p class="sm-menu-text">Owner</p></a>
 		</div>
-		
-		<button id="buttonWindow">click me </button>
-	</div>
-	
-	<div id="controller" >
-	
+
 		<div class="keyboard-shortcuts" id="">
-      		<div class="keyboard">
-        		<div><i class="letter" id="letter-text-t">T</i><span class="letter-text">Top View</span></div>
+		    <div class="keyboard">
+		        <div><i class="letter" id="letter-text-t">T</i><span class="letter-text">Top View</span></div>
 		        <div><i class="letter" id="letter-text-r">R</i><span class="letter-text">Rear View</span></div>
 		        <div><i class="letter" id="letter-text-f">F</i><span class="letter-text">Front View</span></div>
 		        <div><i class="letter" id="letter-text-b">B</i><span class="letter-text">Bottom View</span></div>
 		        <div><i class="letter" id="letter-text-n">N</i><span class="letter-text">Normal View</span></div>
-      		</div>
-    	</div>		
+		    </div>
+		</div>		
+	</div>	
+
+	<div id="modelController">
 	</div>
 	
 	</div>
-
-	<style>
-		
-		#controller {
-			position: fixed;
-	    		top: 8%;
-    			right: 2%;
-		}
-	</style>
-
-	<script>
-		
-	    
-	</script>
 
 </template>
