--- a/OGV/client/styles/styles.css
+++ b/OGV/client/styles/styles.css
@@ -59,6 +59,16 @@ h2 {
     margin-top:20px;
 }
 
+/*
+ * Model Viewer .dat file position
+ */
+
+#modelController {
+    position: fixed;
+    top: 10%;
+    right: 2%;
+}
+
 .mt {
     margin-top: 45px;
     margin-bottom: 40px;
@@ -384,7 +394,6 @@ input:focus {
     left:0;
     top:0;
     z-index: 900;
-
 }
 
 .dropzone-text{
@@ -666,7 +675,7 @@ input:focus {
     }
 
     .keyboard-shortcuts:hover .keyboard{
-        margin: 1.2em 0em 0em 0em;
+        margin: 0.8em 0em 0em 0em;
         -webkit-transition: all 300ms cubic-bezier(0.175, 0.885, 0.335, 1.05);
         -moz-transition: all 300ms cubic-bezier(0.175, 0.885, 0.335, 1.05);
         -o-transition: all 300ms cubic-bezier(0.175, 0.885, 0.335, 1.05);
@@ -676,7 +685,7 @@ input:focus {
     .keyboard-shortcuts:hover .letter-text {
         display: block;
         padding-left: 2.7em;
-        line-height: 2em;
+        line-height: 2.2em;
         color: #fafafa;
     }
 
