--- a/OGV/client/styles/styles.css
+++ b/OGV/client/styles/styles.css
@@ -235,7 +235,7 @@ textarea {
 .help-text {
     font-size: 14px;
     font-style: italic;
-    color: #444;
+    color: #B6B6B4;
 }
 
 .primary-btn {
