--- a/OGV/client/styles/styles.css
+++ b/OGV/client/styles/styles.css
@@ -1059,9 +1059,99 @@ input:focus {
         padding: 2.8em;
     }
 
-/* 
- * L A N D I N G - P A G E  -  E N D S  
+/*
+ * Profile Page CSS
  */
+
+.profilePageTop {
+    padding-bottom: 20px;
+    padding-top: 15px;
+    text-align: center;    
+}
+
+.space {
+    padding: 20px 0;
+}
+
+.user-image{
+    width: 80px;
+    height: 80px;
+    background: #333;
+    border: 0px solid #333;
+    background-size: cover !important;
+    background-position: center !important; 
+    border-radius: 50%;
+}    
+
+.user-image-icon {
+    width:200px; 
+    height:200px;
+    position:relative;
+}
+    @media (max-width: 767px) {
+        .user-image-icon {
+            width:150px; 
+            height:150px;
+        }                       
+    }
+
+
+hr { 
+    background-color: #222; 
+    height: 1px; 
+    border: 1px; 
+    box-shadow: 1.5px 1.5px 2.5px #444;
+}
+
+/*
+ * Explore Page CSS
+ */
+
+#search-box, #search-user-box {
+    padding: 10px;
+    width: 49%;
+    height: 50px;
+    outline: 0;
+    font-size: 15px;
+    text-align: center;
+    border: 1px solid #444;
+}
+    @media (max-width: 767px) {
+        #search-box, #search-user-box {
+            height: 35px;
+        }                       
+    }
+
+
+.explore-heading {
+    text-align: center;
+    padding: 0.5em;
+    font-size: 3em;
+}
+    @media (max-width: 767px) {
+        .explore-heading {
+            padding: 0.7em;
+            font-size: 2em;
+        }                       
+    }
+
+.search-result {
+    background-color:white;
+    border-radius:2%;
+    padding:5px;
+    z-index:1;
+    position:absolute;
+}
+
+/*
+ * Newsfeed Page CSS
+ */
+
+.newsfeed-userInfo {
+    color:#444;
+    font-size: 15px;
+    text-transform:upperCase;    
+}
 
 /* 
  * 4 0 4 . c s s  
@@ -1527,88 +1617,6 @@ svg {
             font-size: 20px;
         }        
     }
-
-
-/*
- * Profile Page CSS
- */
-
-.profilePageTop {
-    padding-bottom: 20px;
-    padding-top: 15px;
-    text-align: center;    
-}
-
-.space {
-    padding: 20px 0;
-}
-
-.user-image{
-    width: 80px;
-    height: 80px;
-    background: #333;
-    border: 0px solid #333;
-    background-size: cover !important;
-    background-position: center !important; 
-    border-radius: 50%;
-}    
-
-.user-image-icon {
-    width:200px; 
-    height:200px;
-    position:relative;
-}
-    @media (max-width: 767px) {
-        .user-image-icon {
-            width:150px; 
-            height:150px;
-        }                       
-    }
-
-
-hr { 
-    background-color: #222; 
-    height: 1px; 
-    border: 1px; 
-    box-shadow: 1.5px 1.5px 2.5px #444;
-}
-
-
-#feedbackDiv
-{
-    z-index: 1400;
-    position:fixed;
-    top:45%;
-    right: -10px;
-    color:#333;
-    height:5px;
-    width:90px;
-    background-color: blue;
-    transform: rotate(270deg);  
-}
-
-#feedbackDiv a h4
-{
-    color:white;
-    position:relative;
-    bottom:8px;
-}
-
-#feedbackContainer
-{
-    background-color: white;
-    padding:5% 5% 5% 5%;
-    border-radius: 15px;
-}
-
-#search-box, #search-user-box {
-  padding: 10px;
-  width: 49%;
-  height: 50px;
-  border: 1px solid #eee;
-  outline: 0;
-  font-size: 15px;
-}
 
 .item {
     white-space: nowrap;
