--- a/OGV/client/templates/explore.html
+++ b/OGV/client/templates/explore.html
@@ -1,58 +1,21 @@
 <template name="explore">
-	<div class="search-input">
+    <div class="col-lg-12 col-md-12 col-sm-12 ">
+        <div class="explore-heading">Explore models and users</div>
+    </div>
+	<div class="search-input container">
 		<input type="text" id="search-box" placeholder="search models here" />
 		<input type="text" id="search-user-box" placeholder="search users here" />
 	</div>
-
-	<nav id="cbp-spmenu-s3" style="display:none;">
-		{{> searchResult}}
-	</nav>
-
-	<nav id="cbp-spmenu-s4" style="display:none;">
-		{{> searchUserResult}}
-	</nav>
-
-<!-- 	<h3>Filters</h3>
 	
-		<select class = "filter-select" id="filter-category" form="filter">
-	  		<option value="" disabled selected>Categories</option>
-	  		<option value="Architecture">Architecture</option>
-	  		<option value="Animal">Animal</option>
-	  		<option value="Character">Character</option>
-	  		<option value="Electronics">Electronics </option>
-	  		<option value="Games">Games</option>
-	  		<option value="Miscellaneous">Miscellaneous</option>
-			<option value="Machines">Machines</option>
-			<option value="Scenes">Scenes</option>
-			<option value="Science">Science</option>
-			<option value="Vegetal">Vegetal</option>
-			<option value="Vehicles">Vehicles</option>
-			<option value="Weapons">Weapons</option>
-		</select>
-		
-		<select class = "filter-select" id = "filter-time" form="filter">
-	  		<option value="" disabled selected>Time period</option>
-	  		<option value="This Day">This Day</option>
-	  		<option value="This Week">This Week</option>
-	  		<option value="This Month">This Month</option>
-		</select>	
-
-		<select class = "filter-select" id = "filter-sort" form="filter">
-	  		<option value="" disabled selected>Sort by</option>
-	  		<option value="Upload Time">Uploaded Time</option>
-	  		<option value="Number Of Views">Number of Views</option>
-	  		<option value="Number of Likes">Number of Likes</option>
-		</select>
-
-		<button class="btn primary-btn btn-default" type="submit" id="save-btn"> Search </button>
-	
-
-	<h3 style="color:#e74c3c;font-weight:300;" id="selected-filters"></h3>
-
-	<div id="exploreResult">
-		{{> exploreResult}}
+	<div class="container">
+		<nav id="cbp-spmenu-s3" style="display:none;">
+			{{> searchResult}}
+		</nav>
+		<nav id="cbp-spmenu-s4" style="display:none;">
+			{{> searchUserResult}}
+		</nav>
 	</div>
- -->
+	
 	<script>
 		$(document).ready(function() {
 		    $('#search-box').focusin(function() {
@@ -74,7 +37,6 @@
 	</script>
 </template>
 
-
 <template name="exploreResult">
 	{{#if models}}
 	{{#each models}}
@@ -85,9 +47,8 @@
     {{/if}}
 </template>
 
-
 <template name="searchResult">
-  <div id='search-result' style="background-color:white;border-radius:2%;padding:5px;z-index:1800;position:absolute">
+  <div id='search-result' class="search-result">
     <div id="search-meta">
       {{#if isLoading}}
         searching ...
@@ -108,7 +69,7 @@
 </template>
 
 <template name="searchUserResult">
-  <div id='search-result' style="background-color:white;border-radius:2%;padding:5px;z-index:1800;position:absolute">
+  <div id='search-result' class="search-result">
     <div id="search-meta">
       {{#if isLoading}}
         searching ...
