--- a/OGV/client/styles/styles.css
+++ b/OGV/client/styles/styles.css
@@ -61,7 +61,7 @@ h2 {
 }
 .right-menu {
 	float:right;
-	line-height:40px;	
+	line-height:40px;
 }
 
 .rm-item:hover {
@@ -120,7 +120,7 @@ h2 {
 	margin:auto;
 	margin-top:60px;
 	z-index:1100;
-	word-wrap:break-word;	
+	word-wrap:break-word;
 }
 .primary-container {
 	max-width:280px;
@@ -144,6 +144,8 @@ h2 {
 textarea {
 	line-height:1.5;
 	min-height: 100px;
+	resize: none;
+
 }
 
 .secondary-form {
@@ -189,7 +191,7 @@ textarea {
     background:#e74c3c;
     color:#fff;
 }
-    
+
 
 .primary-branding {
 	font-size: 24px;
@@ -275,7 +277,7 @@ input:focus {
   position: absolute;
   top: 0;
   left: 0;
-  
+
   -webkit-animation: cubemove 1.8s infinite ease-in-out;
   animation: cubemove 1.8s infinite ease-in-out;
 }
@@ -293,19 +295,19 @@ input:focus {
 }
 
 @keyframes cubemove {
-  25% { 
+  25% {
     transform: translateX(42px) rotate(-90deg) scale(0.5);
     -webkit-transform: translateX(42px) rotate(-90deg) scale(0.5);
-  } 50% { 
+  } 50% {
     transform: translateX(42px) translateY(42px) rotate(-179deg);
     -webkit-transform: translateX(42px) translateY(42px) rotate(-179deg);
-  } 50.1% { 
+  } 50.1% {
     transform: translateX(42px) translateY(42px) rotate(-180deg);
     -webkit-transform: translateX(42px) translateY(42px) rotate(-180deg);
-  } 75% { 
+  } 75% {
     transform: translateX(0px) translateY(42px) rotate(-270deg) scale(0.5);
     -webkit-transform: translateX(0px) translateY(42px) rotate(-270deg) scale(0.5);
-  } 100% { 
+  } 100% {
     transform: rotate(-360deg);
     -webkit-transform: rotate(-360deg);
   }
@@ -355,7 +357,7 @@ input:focus {
      font-size: 14px;
 	color: #555;
 	margin-left: 5px;
-	line-height: 1.5;   
+	line-height: 1.5;
 	max-width: 700px;
     margin:50px auto 50px auto;
 }
@@ -389,9 +391,9 @@ input:focus {
 	background: #333;
 	border: 1px solid #333;
 	background-size:cover !important;
-	background-position: center !important;	
+	background-position: center !important;
 	border-radius:50%;
-}    
+}
 
 .user-profile-pic {
 	width: 200px;
@@ -418,16 +420,16 @@ input:focus {
     width:100%;
     background-repeat:no-repeat;
     background-size:contain;
-    background-position:center;    
+    background-position:center;
     background-color:#333;
     border: 1px solid #ccc;
 }
 
 .model-preview-link{
 	text-align:center;
-	
+
 }
-  
+
 .model-name{
     padding-top:90px;
     color: #fff;
@@ -473,7 +475,7 @@ input:focus {
 	width:500px;
     margin-top:10px;
     display:block;
-    
+
 }
 
 .post-description > p{
@@ -517,7 +519,7 @@ input:focus {
 }
 .comments-wrapper {
 	margin-top:10px;
-}    
+}
 .comments {
     display:none;
     overflow:hidden;
@@ -546,7 +548,7 @@ input:focus {
     border-radius:5px;
 }
 .comment-meta{
-    padding-top:10px;    
+    padding-top:10px;
     color:#666;
     font-size:12px;
     font-style:italic;
